add beer name filter and pagination support to beer listing; update repository, service, controller, tests, and OpenAPI documentation